<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sign Up</string>
    <string name="users">Users</string>
    <string name="username">Enter a username</string>
    <string name="username_label">User Name:</string>
    <string name="email">Enter a E-Mail</string>
    <string name="email_label">E-Mail:</string>
    <string name="password">Enter a password</string>
    <string name="password_label">Password:</string>
    <string name="gender_label">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="button_signup">Sign Up</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Sign Up</string>
    <string name="title_activity_display_message">Sign Up Success</string>
    <string name="row_icon">Icon</string>
    
    <string name="action_search">Search</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>

    
    <string name="hello_world">Hello world!</string>
    <string name="start_browser">Currency Rate (MYR/PKR)</string>
    <string name="start_phone">Dial My Cell Number</string>
    
</resources>